Fixes repeated flickering of tooltips when user hovers over a gray area

--- a/cdap-ui/app/cdap/styles/bootstrap_4_patch.scss
+++ b/cdap-ui/app/cdap/styles/bootstrap_4_patch.scss
@@ -113,6 +113,7 @@
   }
 
   .tooltip {
+    pointer-events: none;
 
     /*
       The way tooltip is structured in bootstrap 4 is
